# BicubicSplineSurface

./: CMakeLists.txt  CalculationMode.h  ComparisonBenchmarkResult.cpp  FullAlgorithm.cpp  FullAlgorithm.h  KnotMatrix.h  KnotVector.h  MathFunction.cpp  MathFunction.h  MultithreadPreparator.h  ReducedAlgorithm.cpp  ReducedAlgorithm.h  Spline.cpp  Spline.h  SplineKnots.h  StopWatch.h  Timer.h  Tridiagonal.cpp  Tridiagonal.h  main.cpp  stdafx.cpp  utils.cpp  utils.h
